overflow fix

--- a/src/components/Windows/Folder/Folder.css
+++ b/src/components/Windows/Folder/Folder.css
@@ -9,5 +9,5 @@
 }
 
 .folderContents {
-
+  overflow-y: auto;
 }
